--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.cdnfonts.com/css/share-tech-mono');
+
 .container {
   background-color: black;
+  z-index: -2;
 }
 
 .main {
@@ -22,32 +25,15 @@
 }
 
 .header p {
-  font-size: 16;
-  font-weight: 400;
+  font: 400 16px 'Share Tech Mono';
   color: #D0D0D0;
   margin: 0 6px 0 6px;
 }
 
-.row {
+.header__row {
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
 .title {
@@ -57,7 +43,6 @@
   width: 50%;
   height: 391px;
   background-color: rgba(255, 255, 255, 0.06);
-  justify-content: space-around;
   backdrop-filter: blur(10px);
   z-index: 1;
 }
@@ -65,62 +50,7 @@
 .title p {
   color: #B1B1B1;
   margin: 30px 0 0 60px;
-  font-size: 50px;
-  font-weight: 400;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  margin-top: 200px;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  font: 400 50px 'Share Tech Mono';
 }
 
 .logo {
@@ -130,11 +60,126 @@
   align-items: center;
   justify-content: center;
   z-index: 0;
+  width: 661px;
+  height: 580px;
+  overflow: hidden;
+}
+
+.grid {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  padding: 200px 0 100px 50px;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.grid_titles {
+font: 400 16px 'Share Tech Mono';
+color: #FFFFFF;
+margin: 31px 0 39px 0;
+}
+
+.grid__buttons {
+  flex-direction: row;
+  display: flex;
+  width: 100%;
+  padding-right: 35px;
+  justify-content: space-between;
+}
+
+.box__search {
+  width: 388px;
+  margin-right: 36px;
+}
+
+.box__project {
+  right: 0;
+}
+
+.box__project,
+.box__search,
+.box {
+  background-color: #646464;
+  border: 1px solid white;
+  font: 400 16px 'share-tech-mono';
+  padding: 12px;
+  z-index: 0;
+}
+
+.projects::-webkit-scrollbar {
+  display: none;
+}
+
+.projects {
+  display: flex;
+  overflow-x: scroll;
+  flex-direction: row;
+  width: 100%;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.upellipse {
+  position: absolute;
+  right: -50vw;
+  top: -102;
+  z-index: 0;
+}
+
+.downellipse {
+  position: absolute;
+  top: 100vh;
+  left: -50vw;
+  z-index: 0;
 }
 
 @media (max-width: 600px) {
   .grid {
     width: 100%;
+    flex-direction: column;
+  }
+
+  .upellipse {
+    display: none;
+  }
+
+  .downellipse {
+    display: none;
+  }
+
+  .title {
+    height: 200px;
+    padding-top: 20px;
+  }
+
+  .title p {
+    font-size: 20px;
+  }
+
+  .logo {
+    margin-top: 70px;
+    height: 400px;
+    width: 350px;
+  }
+
+  .grid__buttons {
+    flex-direction: column;
+  }
+
+  .box__project,
+  .box__search,
+  .box {
+    width: 100%;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  .header p {
+    font-size: 12px;
+  }
+
+  .projects {
     flex-direction: column;
   }
 }
