My projects style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,8 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background-image: url('../assets/background.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
