--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.cdnfonts.com/css/share-tech-mono');
-@import url('https://fonts.cdnfonts.com/css/ntr');
+@import url("https://fonts.cdnfonts.com/css/share-tech-mono");
+@import url("https://fonts.cdnfonts.com/css/ntr");
 
 html,
 body {
@@ -8,6 +8,7 @@ body {
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: black;
 }
 
 a {
@@ -25,7 +26,7 @@ a {
   }
   body {
     color: white;
-    background-image: url('../assets/background.svg');
+    background-image: url("../assets/background.svg");
     background-repeat: no-repeat;
     background-size: cover;
   }
